# oklab-visualiser

./: .gitignore  CMakeLists.txt  README.md
data/: oklab_L0.05.ppm  oklab_L0.10.ppm  oklab_L0.15.ppm  oklab_L0.20.ppm  oklab_L0.25.ppm  oklab_L0.30.ppm  oklab_L0.35.ppm  oklab_L0.40.ppm  oklab_L0.45.ppm  oklab_L0.50.ppm  oklab_L0.55.ppm  oklab_L0.60.ppm  oklab_L0.65.ppm  oklab_L0.70.ppm  oklab_L0.75.ppm  oklab_L0.80.ppm  oklab_L0.85.ppm  oklab_L0.90.ppm  oklab_L0.95.ppm  oklab_L1.00.ppm
src/: ColorOkLab.cpp  ColorOkLab.hpp  ColorRGB.cpp  ColorRGB.hpp  Framebuffer.hpp  main.cpp
